--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,71 @@
-.App {
-  text-align: center;
+body {
+  text-align: center
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+header {
+  background: red;
+  width: 100%;
+  margin: 0;
+  height: 100px;
+  text-align: "center";
+  font-size: 30px
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+footer {
+  background: black;
+  color: white
+}
+.mainContent {
+  background: rgb(84, 168, 189, .4);
+  padding: 10px;
+}
+.loggedOut {
+  background: pink;
+  width: 50%;
+  margin:15% 10px 15% 25%;
+  border-style: solid;
+  border-width: 2px; 
+  border-color: black;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+.contactCard {
+  background: white;
+  width: 50%;
+  margin:10px 10px 10px 25%;
+  border-style: solid;
+  border-width: 2px; 
+  border-color: black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.joke {
+  background: blue;
   color: white;
+  width: 30%;
+  margin:10px 10px 10px 35%;
+  border-style: solid;
+  border-width: 2px; 
+  border-color: black;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.toDoItem {
+  text-align: center;
+  border: 2px solid #cecece;
+  width: 20%;
+  margin:10px 10px 10px 40%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: gray;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.taskName {
+  width: 60%;
+}
+.taskDeleteButton {
+  width: 25%;
+}
+.contactInputLabel {
+  width: 100%;
 }
